# crashlab_main

./: README.md
crashlab_motor/crashlab_motor_control/: CMakeLists.txt  motor_input.txt  package.xml
crashlab_motor/crashlab_motor_control/include/crashlab_motor_control/: motor_control_node.h
crashlab_motor/crashlab_motor_control/src/: motor_control_node.cpp
crashlab_motor/crashlab_motor_pid/: CMakeLists.txt  package.xml
crashlab_motor/crashlab_motor_pid/include/crashlab_motor_pid/: motor_pid_node.h
crashlab_motor/crashlab_motor_pid/src/: motor_pid_node.cpp
crashlab_motor/crashlab_motor_rpm/: CMakeLists.txt  package.xml
crashlab_motor/crashlab_motor_rpm/include/crashlab_motor_rpm/: motor_rpm_node.h
crashlab_motor/crashlab_motor_rpm/src/: motor_rpm_node.cpp
crashlab_motor/crashlab_settings/: pid_gain.txt
crashlab_msg/crashlab_motor_msgs/: CMakeLists.txt  package.xml
crashlab_msg/crashlab_motor_msgs/msg/: control_motor.msg
crashlab_odometry/crashlab_get_odometry/: CMakeLists.txt  package.xml
crashlab_odometry/crashlab_get_odometry/include/crashlab_get_odometry/: get_odometry_node.h
crashlab_odometry/crashlab_get_odometry/src/: get_odometry_node.cpp
crashlab_remote_control/crashlab_teleop_key/: CMakeLists.txt  package.xml
crashlab_remote_control/crashlab_teleop_key/src/: teleop_key_node.cpp
crashlab_settings/: motor_input (explain).txt  motor_input.txt  pid_gain.txt
