<?xml version="1.0"?>
<package format="2">
  <name>crashlab_teleop_key</name>
  <version>0.0.0</version>
  <description>The motor_test package</description>

  <maintainer email="crashlab@todo.todo">crashlab</maintainer>

  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>crashlab_motor_msgs</build_depend>
  <build_depend>pigpiod_if2</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>crashlab_motor_msgs</build_export_depend>
  <build_export_depend>pigpiod_if2</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>crashlab_motor_msgs</exec_depend>
  <exec_depend>pigpiod_if2</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
